--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,6 +154,7 @@ allow 152.32.199.79;
 allow 152.32.206.127;
 allow 152.53.133.14;
 allow 152.53.53.243;
+allow 152.89.107.146;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
@@ -241,7 +242,6 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -283,22 +283,6 @@ allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.217.199.129;
-allow 185.220.100.240;
-allow 185.220.100.241;
-allow 185.220.100.242;
-allow 185.220.100.243;
-allow 185.220.100.244;
-allow 185.220.100.245;
-allow 185.220.100.246;
-allow 185.220.100.247;
-allow 185.220.100.248;
-allow 185.220.100.249;
-allow 185.220.100.250;
-allow 185.220.100.251;
-allow 185.220.100.252;
-allow 185.220.100.253;
-allow 185.220.100.254;
-allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -585,7 +569,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -1208,6 +1191,9 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
+allow 2a00:16b0:1:243::7012:3117;
+allow 2a00:16b0:1:243::7012:a500;
+allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1293,7 +1279,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1311,7 +1296,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1327,22 +1311,6 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:f4c0:16c:10::1;
-allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
-allow 2a0b:f4c0:16c:2::1;
-allow 2a0b:f4c0:16c:3::1;
-allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1576,7 +1544,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1908,7 +1875,6 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1927,6 +1893,9 @@ allow 87.120.254.132;
 allow 87.120.93.182;
 allow 88.151.194.24;
 allow 88.80.20.86;
+allow 88.80.26.2;
+allow 88.80.26.3;
+allow 88.80.26.4;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1956,7 +1925,6 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
