--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -243,6 +243,7 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -1301,6 +1302,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1788,7 +1790,6 @@ allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
 allow 5.101.82.67;
-allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1905,6 +1906,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
