--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -148,7 +148,6 @@ allow 148.113.152.91;
 allow 149.102.153.38;
 allow 149.202.79.129;
 allow 149.56.44.47;
-allow 151.218.32.19;
 allow 152.32.181.53;
 allow 152.32.199.79;
 allow 152.32.206.127;
@@ -243,7 +242,6 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -622,7 +620,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -995,7 +992,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1225,6 +1221,7 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
 allow 2a02:4840:1:3::16;
+allow 2a02:4840:1:3::2a;
 allow 2a02:4840:1:4::9;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1301,7 +1298,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1519,6 +1515,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1532,8 +1529,6 @@ allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5bdd::beef;
-allow 2a0f:ca80::1260:4bff:fea4:19b0;
-allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1675,7 +1670,6 @@ allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
-allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1831,7 +1825,6 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.220.107;
 allow 57.129.91.235;
-allow 5.8.18.46;
 allow 5.8.18.99;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1858,7 +1851,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.75.25;
-allow 78.142.18.219;
 allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1887,6 +1879,7 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.38.130.33;
+allow 84.38.130.50;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1939,6 +1932,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
