--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -146,7 +146,6 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -375,6 +374,7 @@ deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:2d:ea47::1;
 deny 2a02:4840:1:3::16;
+deny 2a02:4840:1:3::2a;
 deny 2a02:4840:1:4::9;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -451,7 +451,6 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -669,6 +668,7 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -682,8 +682,6 @@ deny 2a0e:d604:1:151::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5bdd::beef;
-deny 2a0f:ca80::1260:4bff:fea4:19b0;
-deny 2a0f:ca80::2e59:e5ff:fe49:3738;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
