--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -114,7 +114,6 @@ set_real_ip_from 119.28.139.55;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
-set_real_ip_from 124.198.131.223;
 set_real_ip_from 124.198.131.253;
 set_real_ip_from 124.198.132.172;
 set_real_ip_from 124.198.132.237;
@@ -242,6 +241,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -620,6 +620,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -992,6 +993,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1298,6 +1300,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1558,7 +1561,6 @@ set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:156b::;
 set_real_ip_from 2a11:6100:0:1e6a::1;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
-set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
 set_real_ip_from 2a12:a800:11:1:124:198:132:172;
 set_real_ip_from 2a12:a800:11:1:124:198:132:237;
